90% functionality - database save (possible server save) - Missing image creation - missing social post

--- a/whoswinningredux/app/src/main/res/values/strings.xml
+++ b/whoswinningredux/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
-    <string name="app_name">whoswinningredux</string>
+    <string name="app_name">Who\'s Winning</string>
+    <string name="name_hint">Name</string>
+    <!-- Winner mark (*) and name, allows for RTL languages -->
+    <string name="playerNameFormat">%1$s%2$s</string>
+    <string name="confirm_remove_score">Are you sure you want to remove this score?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="confirm_end">Are you sure you want to end the active game?</string>
+    <string name="save_game_name">Enter name of game:</string>
+    <string name="name_exists">Duplicate name.</string>
+    <string name="save_game">Save the results of this game?</string>
+    <string name="share_game">Share to social media?</string>
 </resources>
