--- a/whoswinningredux/app/src/main/res/values/strings.xml
+++ b/whoswinningredux/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <string name="no">No</string>
     <string name="confirm_end">Are you sure you want to end the active game?</string>
     <string name="save_game_name">Enter name of game:</string>
+    <string name="winner_label">Winner:</string>
+    <string name="high_score">High\nScore</string>
+    <string name="low_score">Low\nScore</string>
     <string name="name_exists">Duplicate name.</string>
     <string name="save_game">Save the results of this game?</string>
     <string name="share_game">Share to social media?</string>
