--- a/whoswinningredux/app/src/main/res/values/strings.xml
+++ b/whoswinningredux/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="confirm_remove_player">Are you sure you want to remove this player?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="ok">OK</string>
+    <string name="show_details">Show Details"></string>
+    <string name="summary_player_format">%1$s (%2$d)</string>
     <string name="confirm_end">Are you sure you want to end the active game?</string>
     <string name="save_game_name">Enter name of game:</string>
     <string name="winner_label">Winner:</string>
